--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
-  "name": "portfolioproject",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "myportfolio",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch scss:css --style=expanded --no-source-map"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "sass": "^1.92.1"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scroll": "^1.9.3",
-    "sass": "^1.85.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@emailjs/browser": "^4.4.1"
   }
 }
